--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,3 @@
 install:
-  - FILE="-Dfile=ffmpeg-kit-full-gpl-6.0.LTS.aar"
-  - mvn install:install-file $FILE -DgroupId=com.lb.sdktest -DartifactId=test -Dversion=1.0 -Dpackaging=aar -DgeneratePom=true
+  - FILE="-Dfile=ffmpeg-kit-full-gpl-6.0-2.LTS.aar"
+  - mvn install:install-file $FILE -DgroupId=com.lb.sdktest -DartifactId=test -Dversion=1.1 -Dpackaging=aar -DgeneratePom=true
